--- a/loc/english.yaml
+++ b/loc/english.yaml
@@ -1,6 +1,6 @@
 Rogue_Company_name: "Rogue Company"
 heist_RogueCompany_brief: "Hello my new friends! I am sure we'll get along just fine. I'll cut straight to the point. The Jackals are backstabbing assholes that left me to die on my last job with them. They took something valuable from me: part of my hacking equipment. It's all packed up in a silver briefcase and I managed to track it down to one of their industrial blocks. I need that briefcase back if I want to do some more mischief. While you are there, why not take some of their loot: Weapons, Coke, Cash, you name it! I'll make sure to make every additional bag worth your time. Cops are already in the area, blocking off streets and preparing for an ambush themselves. I'd suggest you dress accordingly."
-heist_RogueCompany_name: Rogue Company
+heist_RogueCompany_name: "Rogue Company"
 RC_obj_4a_desc: "The driver will pick you up by the garage exit. Move to the underpass to get to the nearest garage entrance."
 RC_obj_6B: "Move to the other alley"
 RC_obj_4B: "Move to the sidealley"
